# N2-Station

./: .gitignore  README.md  auth.py  config.json  cron.py  info.py  interface.py  main.py  package-lock.json  package.json  process.py  setup.sql  user.py  utils.py  vue.config.js  ws.py
.github/workflows/: release.yml  rust.yml
frontend/: index.html  package-lock.json  package.json
frontend/scss/: starter.scss
n2-station/: .env  .gitignore  Cargo.toml  README.md
n2-station/src/: main.rs
n2-station/src/backend/: danmaku.rs  incremental.rs  mod.rs  model.rs  routes.rs
public/: index.html  manifest.json
src/: App.vue  main.js
src/components/: Global.vue  LoginForm.vue  NewPlayerInstance.vue  PanelCreateRoom.vue  PanelMenu.vue  PanelRoomList.vue  PlayerInstance.vue  TagItems.vue  TagSort.vue  Todo.vue  UserPanel.vue  Welcome.vue
src/plugins/: aliplayer.js  vuetify.js
src/router/: index.js
test-frontend/: index.html
