[package]
name = "n2-station"
version = "0.1.2"
authors = ["switefaster <switefaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rbatis = { version = "1.8", default-features = false, features = ["actix-mysql"] }
argh = "0.1"
anyhow = "1.0"
actix-files = "0.3"
actix-identity = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
serde_json = "1.0"
bcrypt = "0.9"
log = "0.4"
env_logger = "0.8"
fancy-regex = "0.4"
lazy_static = "1.4"
