[package]
name = "n2-station"
version = "0.1.4"
authors = ["switefaster <switefaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
# actix-web = { version = "4.0.0-beta.3", features = ["openssl"] }
rbatis = { version = "1.8.71", default-features = false, features = ["actix-mysql"] }
argh = "0.1.4"
anyhow = "1.0.38"
actix = "0.10.0"
# actix-files = "0.3"
actix-identity = "0.3.1"
# actix-multipart = "0.3"
actix-web-actors = "3.0.0"
# actix-form-data = "0.5"
serde = { version = "1.0.123", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.12"
serde_json = "1.0.62"
bcrypt = "0.9.0"
log = "0.4.14"
env_logger = "0.8.3"
fancy-regex = "0.5.0"
lazy_static = "1.4.0"
rand = "0.8.3"
openssl = { version = "0.10", features = ["v110"] }
# cookie = "0.14"

[profile.release]
lto = true
